updating Fig 1, and change "whole-tree" to "tree"

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -107,17 +107,17 @@ Acknowledgments | ##	||
 #  200 word limit, no bullet points  
 ```
 
-Rising temperatures are profoundly influencing forests on many scales with potentially strong variation vertically across forest strata. Using published research and new analyses, we evaluate how environmental conditions, leaf temperatures, and foliar traits and metabolism vary across vertical gradients, shaping whole-tree ecology and ecosystem function. In forests with dense canopies, canopy leaves are exposed to higher solar radiation and evaporative demand than understory leaves, and can experience elevated leaf temperature ($T_{leaf}$), particularly when transpirational cooling is curtailed by limited stomatal conductance.  However, foliar traits that also vary strongly across height or light gradients can partially mitigate the elevation of $T_{leaf}$ in the upper canopy. Leaf metabolism generally increases with height across the vertical gradient, and tall trees have higher absolute metabolic capacity and growth at both individual and ecosystem levels. Yet, differences in thermal sensitivity and damage thresholds across the gradient are modest. Under climate warming and increased drought, larger trees can face disproportionate stress, yet understory trees have fewer cooling mechanisms and thus may be impacted the most under hot, humid conditions, or when the buffering provided by large trees is lost.
+Rising temperatures are profoundly influencing forests on many scales with potentially strong variation vertically across forest strata. Using published research and new analyses, we evaluate how environmental conditions, leaf temperatures, and foliar traits and metabolism vary across vertical gradients, shaping tree ecology and ecosystem function. In forests with dense canopies, canopy leaves are exposed to higher solar radiation and evaporative demand than understory leaves, and can experience elevated leaf temperature ($T_{leaf}$), particularly when transpirational cooling is curtailed by limited stomatal conductance.  However, foliar traits that also vary strongly across height or light gradients can partially mitigate the elevation of $T_{leaf}$ in the upper canopy. Leaf metabolism generally increases with height across the vertical gradient, and tall trees have higher absolute metabolic capacity and growth at both individual and ecosystem levels. Yet, differences in thermal sensitivity and damage thresholds across the gradient are modest. Under climate warming and increased drought, larger trees can face disproportionate stress, yet understory trees have fewer cooling mechanisms and thus may be impacted the most under hot, humid conditions, or when the buffering provided by large trees is lost.
 
 \newpage
 
 # Introduction
 
 Forest responses and feedbacks to climate change will have a critical influence on the future of Earth's climate.
-Global average temperatures have risen 1.2 $^\circ$C since 1900 [@rohdeBerkeleyEarthLand2020] and are expected to reach or even exceed +1.5 $^\circ$C in the next 20 years [@ipccClimateChangeWidespread2021], accompanied by increasing severity and frequency of heat waves [@meehlMoreIntenseMore2004; @ipccClimateChangeWidespread2021] and hotter droughts [@trenberthGlobalWarmingChanges2014b].
+Global average temperatures have risen 1.2$^\circ$C since 1900 [@rohdeBerkeleyEarthLand2020] and are expected to reach or even exceed +1.5$^\circ$C in the next 20 years [@ipccClimateChangeWidespread2021], accompanied by increasing severity and frequency of heat waves [@meehlMoreIntenseMore2004; @ipccClimateChangeWidespread2021] and hotter droughts [@trenberthGlobalWarmingChanges2014b].
 These changes are expected to have profound effects on tree metabolism and forest ecosystem function [@breshearsUnderappreciatedPlantVulnerabilities2021; @portnerScientificOutcomeIPBESIPCC2021] by altering rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities2021; @corlettImpactsWarmingTropical2011; @scafaroResponsesLeafRespiration2021], causing foliar damage during heat waves [@osullivanThermalLimitsLeaf2017; @corlettImpactsWarmingTropical2011], and reducing growth and elevating mortality during drought [@breshearsUnderappreciatedPlantVulnerabilities2021; @mcdowellPervasiveShiftsForest2020]. 
 The net result of higher temperatures may be increased or decreased tree growth and forest carbon sequestration, with decreases being more commonly documented across the world's forests [@oishiWarmerTemperaturesReduce2018; @sullivanLongtermThermalSensitivity2020; @anderson-teixeiraCarbonCyclingMature2021]. 
-The resulting feedbacks to the climate system, carbon storage, and changes in albedo and hydrology will in turn impact the the future trajectory of climate change [@bonan_ecological_2016], yet the degree of the impact remains uncertain [@krauseLargeUncertaintyCarbon2018; @friedlingsteinClimateCarbonCycle2006].
+The resulting feedbacks to the climate system, carbon storage, and changes in albedo and hydrology will in turn impact the future trajectory of climate change [@bonan_ecological_2016], yet the degree of the impact remains uncertain [@krauseLargeUncertaintyCarbon2018; @friedlingsteinClimateCarbonCycle2006].
  
 A great measure of uncertainty arises due to the differential impacts of rising temperatures on trees of differential size and canopy position, especially as small understory trees exist in microenvironments that are substantially buffered by more exposed canopy trees [@zellweger_seasonal_2019; @davisMicroclimaticBufferingForests2019].
 Forests are vertically and horizontally stratified, with overstory canopies playing a crucial role in moderating forest climatic conditions [@ozanneBiodiversityMeetsAtmosphere2003; @nakamuraForestsTheirCanopies2017], including buffering understory microclimates from extreme meteorological conditions [@zellweger_seasonal_2019]. 
@@ -131,10 +131,10 @@ We focus on five key themes (Fig. `r fig_schematic`):
 (2) leaf temperature ($T_{leaf}$);
 (3) the leaf traits that most strongly influence $T_{leaf}$;
 (4) leaf metabolism and gas exchange, including stomatal conductance, photosynthesis, respiration, and volatile organic compound (VOC) production; and 
-(5) whole-tree and ecosystem ecology.
+(5) tree and ecosystem ecology.
 We then consider the implications for understanding forest responses to global change, including how these responses scale across space and time. 
 
-![**Figure `r fig_schematic`. Schematic summarizing vertical gradients in forests according to (1) biophysical environment, (2) leaf temperature ($T_{leaf}$), (3) leaf traits, (4) leaf metabolism, and (5) whole-tree and ecosystem ecology.** Abbreviations are as follows: VPD: vapor pressure deficit;  $T_{leaf}$ - $T_{air}$: leaf-to-air temperature difference; LMA: leaf mass per area, VAZ: violaxanthin, antheraxanthin and zeaxanthin concentrations, VOC: volatile organic compounds; T sensitivity: temperature sensitivity; ET: evapotranspiration. Here, we summarize conditions in dense canopies during growing season and daytime conditions; patterns tend to be weaker, or sometimes reversed, in more open canopies, when canopy trees are seasonally deciduous, or at nighttime. Arrows indicate direction of increase, with double-pointed arrows indicating that observations have shown increases both higher and lower in the canopy. ](schematics/Schematic figure 1.png)
+![**Figure `r fig_schematic`. Schematic summarizing vertical gradients in forests according to (1) biophysical environment, (2) leaf temperature ($T_{leaf}$), (3) leaf traits, (4) leaf metabolism, and (5) tree and ecosystem ecology.** Abbreviations are as follows: VPD: vapor pressure deficit;  $T_{leaf}$ - $T_{air}$: leaf-to-air temperature difference; LMA: leaf mass per area, VAZ: violaxanthin, antheraxanthin and zeaxanthin concentrations, VOC: volatile organic compounds; T sensitivity: temperature sensitivity; ET: evapotranspiration. Here, we summarize conditions in dense canopies during growing season and daytime conditions; patterns tend to be weaker, or sometimes reversed, in more open canopies, when canopy trees are seasonally deciduous, or at nighttime. Arrows indicate direction of increase, with double-pointed arrows indicating that observations have shown increases both higher and lower in the canopy. ](schematics/Schematic figure 1.png)
 
 
 # Review of vertical gradients
@@ -388,14 +388,14 @@ A recent inventory in an Amazon forest showed that both the abundance of emittin
 This observation is consistent with the hypothesis that temperature sensitive isoprene emissions enable real-time acclimation to rapidly changing leaf thermal environments typical of the mid-canopy region [@sharkeyIsopreneEmissionPlants2008], due to the sun's passage across a dynamically structured canopy surface. 
 Future work seeking to understand how temporal dynamics of leaf heating [see @leighInfluenceLeafSize2017] vary through the canopy and influence leaf function will be important for resolving the role of isoprenes in forest thermal sensitivity across the vertical gradient.
 
-## Whole-tree and ecosystem ecology
+## Tree and ecosystem ecology
 
-Differences across forest vertical gradients in biophysical conditions, plant traits, and metabolism scale up to affect whole-tree ecology, ecosystem ecology, and their temperature responses (Fig. `r fig_schematic`). 
+Differences across forest vertical gradients in biophysical conditions, plant traits, and metabolism scale up to affect tree ecology, ecosystem ecology, and their temperature responses (Fig. `r fig_schematic`). 
 
 ### Tree metabolism and growth, and survival
 
 Tree metabolism and growth and shaped by the positioning of their crowns within the vertical gradient.
-Tree height, crown volume, and foliage biomass all scale with diameter at breast height (DBH), which in turn is a strong predictor of whole-tree transpiration and photosynthesis [@meinzerWaterTransportTrees2001;@kunertRevisedHydrologicalModel2017; @anderson-teixeiraSizerelatedScalingTree2015].
+Tree height, crown volume, and foliage biomass all scale with diameter at breast height (DBH), which in turn is a strong predictor of tree transpiration and photosynthesis [@meinzerWaterTransportTrees2001;@kunertRevisedHydrologicalModel2017; @anderson-teixeiraSizerelatedScalingTree2015].
 Specifically, increases are linked to increased leaf area and the increasing probability that the crown is in the canopy [@muller-landauTestingMetabolicEcology2006], where higher light availability results in higher leaf area-specific photosynthesis (Table `r table_leaf_metabolism`).
 The net foliar photosynthate production is allocated among functions including respiration, woody growth, foliar turnover, root growth and allocation to root-associated microorganisms, reproduction, defense, and storage of non-structural carbohydrates (NSCs). 
 Within a stand, woody growth rates, measured as radial stem growth or biomass increment,  generally increase with tree size [e.g., @muller-landauTestingMetabolicEcology2006, @stephensonRateTreeCarbon2014]. 
@@ -404,7 +404,7 @@ NSC reserves also increase with tree size, such that larger trees have relativel
 
 
 **Vertical gradients also affect the climate sensitivity of metabolism and growth.** 
-Stomatal conductance tends to be more strongly limited by high atmospheric demand (high $T_{air}$ and VPD, low RH) even before soil water becomes limited in forests not experiencing drought [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Therefore, periods of high atmospheric demand--be these on time scales of hours, days, or seasons--tend to cause greater reductions in whole-tree transpiration and photosynthesis in tall trees that occupy canopy positions in relatively dense-canopy forests [@christoffersenLinkingHydraulicTraits2016; @garciaImportanceHydraulicStrategy2021]. This is consistent with the observation that $g_s$-limitation with $T_{air}$ increases with height in the canopy (Table `r table_leaf_metabolism`). More active stomatal regulation of tall canopy trees [e.g., @mediavillaStomatalResponsesDrought2004]-- often combined with greater effective rooting depth--may offset greater xylem embolism risk [@olsonPlantHeightHydraulic2018; @garciaImportanceHydraulicStrategy2021; @chitra-tarakHydraulicallyvulnerableTreesSurvive2021] and lower capacity to adjust traits related to carbon metabolism to drought [@bartholomewSmallTropicalForest2020]. This results in decreasing carbon isotope discrimination, indicative of an increasingly conservative hydraulic strategy, with increasing tree height [Table `r table_leaf_traits`, @mcdowellRelationshipTreeHeight2011].
+Stomatal conductance tends to be more strongly limited by high atmospheric demand (high $T_{air}$ and VPD, low RH) even before soil water becomes limited in forests not experiencing drought [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Therefore, periods of high atmospheric demand--be these on time scales of hours, days, or seasons--tend to cause greater reductions in tree transpiration and photosynthesis in tall trees that occupy canopy positions in relatively dense-canopy forests [@christoffersenLinkingHydraulicTraits2016; @garciaImportanceHydraulicStrategy2021]. This is consistent with the observation that $g_s$-limitation with $T_{air}$ increases with height in the canopy (Table `r table_leaf_metabolism`). More active stomatal regulation of tall canopy trees [e.g., @mediavillaStomatalResponsesDrought2004]-- often combined with greater effective rooting depth--may offset greater xylem embolism risk [@olsonPlantHeightHydraulic2018; @garciaImportanceHydraulicStrategy2021; @chitra-tarakHydraulicallyvulnerableTreesSurvive2021] and lower capacity to adjust traits related to carbon metabolism to drought [@bartholomewSmallTropicalForest2020]. This results in decreasing carbon isotope discrimination, indicative of an increasingly conservative hydraulic strategy, with increasing tree height [Table `r table_leaf_traits`, @mcdowellRelationshipTreeHeight2011].
 
 In turn, the climate sensitivity of woody growth tends to be greater in canopy trees. In the field of dendrochronology, it is generally accepted that tree ring records of large, exposed trees are best suited for climate reconstructions because their annual growth displays the greatest sensitivity to interannual variation in climate [@frittsTreeRingsClimate1976]. However, only a relatively limited number of studies have directly examined drought- or temperature-sensitivities as a function of tree size.
 These have generally found greater sensitivity to low precipitation or seasonally high temperatures among larger, more exposed trees [**Fig. `r fig_treerings`**, @trouillierSizeMattersComparison2018; @gillerotTreeNeighbourhoodDiversity2020; @mcgregorTreeHeightLeaf2021], corroborating evidence from globally disurbed forest censuses that larger trees tend to undergo larger growth declines during drought [@bennettLargerTreesSuffer2015]. In addition to lower drought resistance of growth, larger trees frequently exhibit lower ability to recover from stress [ie. resilience, @mcgregorTreeHeightLeaf2021; @gillerotTreeNeighbourhoodDiversity2020], and greater increases in mortality [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019].
