--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -339,6 +339,23 @@
   urldate = {2020-08-18},
   abstract = {In a deciduous forest, differences in leaf phenology between juvenile and adult trees could result in juvenile trees avoiding canopy shade for part of the growing season. By expanding leaves earlier or initiating senescence later than canopy trees, juvenile trees would have some period in high light and therefore greater potential carbon gain. We observed leaf phenology of 376 individuals of 13 canopy tree species weekly over 3 years in a deciduous forest in east central Illinois, USA. Our objectives were: (1) to quantify for each species the extent of differences in leaf phenology between juvenile and conspecific adult trees; and (2) to determine the extent of phenological differences between juvenile Aesculus glabra Willd. and Acer saccharum Marsh. trees in understory and gap microhabitats. All species displayed phenological differences between life stages. For 10 species, bud break was significantly earlier, by an average of 8 days, for subcanopy individuals than for canopy individuals. In 11 species, completion of leaf expansion was earlier, by an average of 6 days, for subcanopy individuals than for canopy individuals. In contrast, there were no significant differences between life stages for start of senescence in 10 species and completion of leaf drop in nine species. For eight species, leaf longevity was significantly greater for subcanopy individuals than for canopy individuals by an average of 7 days (range = 4–10 days). Leaf phenology of subcanopy individuals of both Aesculus glabra and Acer saccharum responded to gap conditions. Leaf longevity was 11 days less in the understory than in gaps for Aesculus glabra, but 14 days more in the understory than in gaps for Acer saccharum. Therefore, leaf phenology differed broadly both between life stages and within the juvenile life stage in this community. A vertical gradient in temperature sums is the proposed mechanism explaining the patterns. Temperature sums accumulated more rapidly in the sheltered understory than in an open elevated area, similar to the canopy. Early leaf expansion by juvenile trees may result in a period of disproportionately higher carbon gain, similar to gains made during summer months from use of sun flecks.},
   langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\YHAP5ZVU\\Augspurger & Bartlett 2003 Tree Phys adult juvenile leaf phenology.pdf}
+}
+
+@article{augspurgerDifferencesLeafPhenology2003a,
+  title = {Differences in Leaf Phenology between Juvenile and Adult Trees in a Temperate Deciduous Forest},
+  author = {Augspurger, C. K. and Bartlett, E. A.},
+  date = {2003-06-01},
+  journaltitle = {Tree Physiology},
+  volume = {23},
+  number = {8},
+  pages = {517--525},
+  issn = {0829-318X, 1758-4469},
+  doi = {10.1093/treephys/23.8.517},
+  url = {https://academic.oup.com/treephys/article-lookup/doi/10.1093/treephys/23.8.517},
+  urldate = {2020-08-18},
+  abstract = {In a deciduous forest, differences in leaf phenology between juvenile and adult trees could result in juvenile trees avoiding canopy shade for part of the growing season. By expanding leaves earlier or initiating senescence later than canopy trees, juvenile trees would have some period in high light and therefore greater potential carbon gain. We observed leaf phenology of 376 individuals of 13 canopy tree species weekly over 3 years in a deciduous forest in east central Illinois, USA. Our objectives were: (1) to quantify for each species the extent of differences in leaf phenology between juvenile and conspecific adult trees; and (2) to determine the extent of phenological differences between juvenile Aesculus glabra Willd. and Acer saccharum Marsh. trees in understory and gap microhabitats. All species displayed phenological differences between life stages. For 10 species, bud break was significantly earlier, by an average of 8 days, for subcanopy individuals than for canopy individuals. In 11 species, completion of leaf expansion was earlier, by an average of 6 days, for subcanopy individuals than for canopy individuals. In contrast, there were no significant differences between life stages for start of senescence in 10 species and completion of leaf drop in nine species. For eight species, leaf longevity was significantly greater for subcanopy individuals than for canopy individuals by an average of 7 days (range = 4–10 days). Leaf phenology of subcanopy individuals of both Aesculus glabra and Acer saccharum responded to gap conditions. Leaf longevity was 11 days less in the understory than in gaps for Aesculus glabra, but 14 days more in the understory than in gaps for Acer saccharum. Therefore, leaf phenology differed broadly both between life stages and within the juvenile life stage in this community. A vertical gradient in temperature sums is the proposed mechanism explaining the patterns. Temperature sums accumulated more rapidly in the sheltered understory than in an open elevated area, similar to the canopy. Early leaf expansion by juvenile trees may result in a period of disproportionately higher carbon gain, similar to gains made during summer months from use of sun flecks.},
+  langid = {english},
   file = {C\:\\Users\\Me\\Desktop\\Smithsonian Sun and Shade Information\\Augspurger & Bartlett 2003 Tree Phys adult juvenile leaf phenology.pdf}
 }
 
@@ -1598,7 +1615,7 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\QT38IXYE\\Chin and Sillett - 2019 - Within-crown plasticity in leaf traits among the t.pdf;C\:\\Users\\Me\\Zotero\\storage\\27HZSRMA\\ajb2.html}
 }
 
-@article{chitra-tarakHydraulicallyvulnerableTreesSurvive2021a,
+@article{chitra-tarakHydraulicallyvulnerableTreesSurvive2021,
   title = {Hydraulically-Vulnerable Trees Survive on Deep-Water Access during Droughts in a Tropical Forest},
   author = {Chitra-Tarak, Rutuja and Xu, Chonggang and Aguilar, Salomón and Anderson-Teixeira, Kristina J. and Chambers, Jeff and Detto, Matteo and Faybishenko, Boris and Fisher, Rosie A. and Knox, Ryan G. and Koven, Charles D. and Kueppers, Lara M. and Kunert, Nobert and Kupers, Stefan J. and McDowell, Nate G. and Newman, Brent D. and Paton, Steven R. and Pérez, Rolando and Ruiz, Laurent and Sack, Lawren and Warren, Jeffrey M. and Wolfe, Brett T. and Wright, Cynthia and Wright, S. Joseph and Zailaa, Joseph and McMahon, Sean M.},
   date = {2021},
