--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -388,7 +388,7 @@ A recent inventory in an Amazon forest showed that both the abundance of emittin
 This observation is consistent with the hypothesis that temperature sensitive isoprene emissions enable real-time acclimation to rapidly changing leaf thermal environments typical of the mid-canopy region [@sharkeyIsopreneEmissionPlants2008], due to the sun's passage across a dynamically structured canopy surface. 
 Future work seeking to understand how temporal dynamics of leaf heating [see @leighInfluenceLeafSize2017] vary through the canopy and influence leaf function will be important for resolving the role of isoprenes in forest thermal sensitivity across the vertical gradient.
 
-## Tree and ecosystem ecology
+## Tree ecology
 
 Differences across forest vertical gradients in biophysical conditions, plant traits, and metabolism scale up to affect tree ecology, ecosystem ecology, and their temperature responses (Fig. `r fig_schematic`). 
 
@@ -448,11 +448,11 @@ Although understory leaves are unlikely to face the same absolute extremes of $T
 A buffering effect from the canopies might allow shaded layers to photosynthesize longer in the day [@millerOnlySunlitLeaves2021; @heChangesShadowShifting2018], especially if RH in the understory does not inhibit transpirational cooling [Fig `r fig_treerings`, @rollinsonClimateSensitivityUnderstory2020].
 In the understory, warming is disproportionately affecting the less thermally-adapted plant species, resulting in associated plant community thermophilization [@zellwegerForestMicroclimateDynamics2020; @duqueThermophilizationAdultJuvenile2015; @greiserHidingClimateCharacterizing2019]. 
 
-Canopy disturbance (see next section) along with a trend towards younger forests and again reduced tree growth associated with warming [@mcdowellPervasiveShiftsForest2020] poses an increasing threat to the biodiversity of microrefugia that are otherwise buffered from extremes [@scheffersMicrohabitatsReduceAnimal2013; @greiserHidingClimateCharacterizing2019]. 
+Canopy disturbance (see next section) along with a trend towards younger forests and again reduced tree growth associated with warming [@mcdowellPervasiveShiftsForest2020] poses an increasing threat to the biodiversity of microrefugia that are otherwise buffered from climatic extremes [@scheffersMicrohabitatsReduceAnimal2013; @greiserHidingClimateCharacterizing2019]. 
 
 ### Canopy disturbance
 
-Canopies are crucial to microclimatic stratification, as they buffer several aspects of forest microenvironments [Figs 1-2, @zellweger_seasonal_2019], particularly in wetter environments with dense canopies [@davisMicroclimaticBufferingForests2019]. Severe droughts and rising temperatures place canopies at risk, as larger trees tend to suffer more during droughts [@bennettLargerTreesSuffer2015]. The disproportionate impact of disturbance on large trees holds for other types of disturbance, including forest fragmentation and logging [@lauranceRainForestFragmentation2006; @millerReducedImpactLogging2011], although fire tends to predominantly affect smaller trees [@brandoDroughtsWildfiresForest2019]. Canopy structure affects understory species composition, which has been shown to shift under warming and canopy disturbance [@majasalmiImpactTreeCanopy2020; @bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020]
+Canopies are crucial to microclimatic stratification, as they buffer several aspects of forest microenvironments [Figs 1-2, @zellweger_seasonal_2019], particularly in wetter environments with dense canopies [@davisMicroclimaticBufferingForests2019]. Severe droughts and rising temperatures place canopies at risk, as larger trees tend to suffer more during droughts [@bennettLargerTreesSuffer2015]. The disproportionate impact of stress on large trees holds for other types of disturbance, including forest fragmentation and logging [@lauranceRainForestFragmentation2006; @millerReducedImpactLogging2011], although fire tends to predominantly affect smaller trees [@brandoDroughtsWildfiresForest2019]. Canopy structure affects understory species composition, which has been shown to shift under warming and canopy disturbance [@majasalmiImpactTreeCanopy2020; @bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020]
 
 In general, disturbances (e.g., drought, fire, fragmentation, and logging) reduce canopy cover, which in turn increases incident radiation levels and temperatures within the canopy [@starkReframingTropicalSavannization2020]. This shift to hotter and drier microclimates often makes forests more susceptible to further disturbances, for example, increasing fire risk [@brandoAbruptIncreasesAmazonian2014; @aragao21stCenturyDroughtrelated2018]. Severe degradation impacts can cause dramatic ecological state changes (e.g., the transition from forest to more open, savanna-like vegetation in tropical forest regions through 'savannization') and non-linear threshold responses in energy balance and associated microclimates, with implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020].
 
@@ -474,9 +474,9 @@ Though an improvement over big-leaf models, DGVMs that separate the canopy into 
 
 **Scaling in situ data with remote sensing**
 
-Remote sensing data provide a valuable means to scale between in situ observations and DGVMs. Specifically, the increasing availability of airborne and spaceborne LiDAR and thermal remote sensing data offer a promising opportunity for mapping vertical thermal gradients in combination with vegetation structure at locations with in situ data and across larger landscapes (Fig. `r fig_model`). Airborne and spaceborne lidar, as well as terrestrial laser scanning data yield detailed 3D reconstructions of whole tree and forest structure. These data can be leveraged in combination with thermal remote sensing data from the spaceborne ECOSTRESS sensor [@hulleyNewECOSTRESSMODIS2019; @fisherECOSTRESSNASANext2020] or drone- and tower-based FLIR cameras. 
+Remote sensing data provide a valuable means to scale between *in situ* observations and DGVMs. Specifically, the increasing availability of airborne and spaceborne lidar and thermal remote sensing data offer a promising opportunity for mapping vertical thermal gradients in combination with vegetation structure at locations with in situ data and across larger landscapes (Fig. `r fig_model`). Airborne and spaceborne lidar, as well as terrestrial laser scanning data yield detailed 3D reconstructions of whole tree and forest structure. These data can be leveraged in combination with thermal remote sensing data from the spaceborne ECOSTRESS sensor [@hulleyNewECOSTRESSMODIS2019; @fisherECOSTRESSNASANext2020] or drone- and tower-based FLIR cameras. 
 
-Detailed structural information from lidar data has been used to measure tree height, DBH, and crown dimensions [@fisherECOSTRESSNASANext2020], evaluate spatial variation in vertical leaf area density profiles [@dettoSpatialVariabilityTropical2015], and resolve complex seasonal and diurnal variation in shortwave radiation forcing in ecosystems [@musselmanEstimationSolarDirect2013]. In addition, shading by the overstory can be better represented to predict understory temperatures by modeling the time-varying interaction of the forest canopy with solar radiation, as has been done in other LiDAR-based analyses [e.g., @davisLiDARderivedTopographyForest2019]. Satellite and airborne thermal infrared remote sensing analyses are now being conducted at regional and continental scales, although very few applications exist at finer-scales necessary for understanding of vertical variation in plant canopy temperatures [@johnstonWhatLiesVertical2020 in review]. @pauTropicalForestTemperature2018 used data from a tower-based FLIR camera in combination with eddy-covariance data and found that tropical forest canopy temperatures were more strongly associated with GPP than $T_{air}$ or VPD. However, the authors did not consider vertical light environment conditions even though light directly influences the deviation between canopy temperature and $T_{air}$. In a savanna system in the western U.S., [@johnstonWhatLiesVertical2020 in review] found significant vertical variation in plant temperature, with warmer temperatures in the understory compared to the top of the blue oak canopies. This finding was the opposite of what was expected and occurred in association with very high grass temperatures. The growing availability of these data makes this an opportune time to link fine-scale and landscape-scale measurements with the type of in situ measurements reviewed above to further explore ecosystem-scale patterns in vertical temperature gradients seasonally and across biomes. 
+Detailed structural information from lidar data has been used to measure tree height, DBH, and crown dimensions [@fisherECOSTRESSNASANext2020], evaluate spatial variation in vertical leaf area density profiles [@dettoSpatialVariabilityTropical2015], and resolve complex seasonal and diurnal variation in shortwave radiation forcing in ecosystems [@musselmanEstimationSolarDirect2013]. In addition, shading by the overstory can be better represented to predict understory temperatures by modeling the time-varying interaction of the forest canopy with solar radiation, as has been done in other lidar-based analyses [e.g., @davisLiDARderivedTopographyForest2019]. Satellite and airborne thermal infrared remote sensing analyses are now being conducted at regional and continental scales, although very few applications exist at finer-scales necessary for understanding of vertical variation in plant canopy temperatures [@johnstonWhatLiesVertical2020 in review]. @pauTropicalForestTemperature2018 used data from a tower-based FLIR camera in combination with eddy-covariance data and found that tropical forest canopy temperatures were more strongly associated with GPP than $T_{air}$ or VPD. However, the authors did not consider vertical light environment conditions even though light directly influences the deviation between canopy temperature and $T_{air}$. In a savanna system in the western U.S., [@johnstonWhatLiesVertical2020 in review] found significant vertical variation in plant temperature, with warmer temperatures in the understory compared to the top of the blue oak canopies. This finding was the opposite of what was expected and occurred in association with very high grass temperatures. The growing availability of these data makes this an opportune time to link fine-scale and landscape-scale measurements with the type of in situ measurements reviewed above to further explore ecosystem-scale patterns in vertical temperature gradients seasonally and across biomes. 
 
 
 
